Shared Views: Login and Register
Add login module and view
Add register module and view
Add "roboto" fonts
Add translate module and translation keys

--- a/frontend/src/scss/_normalize.scss
+++ b/frontend/src/scss/_normalize.scss
@@ -9,6 +9,7 @@ html, html body {
 
 body {
   @include display-flex(column);
+  font-family: Roboto, "Helvetica Neue", sans-serif;
 
   -webkit-user-select: none;
   -webkit-touch-callout: none;
