--- a/frontend/projects/shared/src/lib/login/view/login-view.component.scss
+++ b/frontend/projects/shared/src/lib/login/view/login-view.component.scss
@@ -6,6 +6,7 @@
   .view-login {
     @include flex-resizable();
     @include display-flex(column);
+    @include notch-body();
     overflow: auto;
 
     .form {
