--- a/frontend/projects/shared/src/lib/register/view/register-view.component.html
+++ b/frontend/projects/shared/src/lib/register/view/register-view.component.html
@@ -4,12 +4,12 @@
     <div class="picture-box" *ngIf="!errorCode">
       <dfo-picture-list color="#c1c1c1"></dfo-picture-list>
     </div>
-    <bike-message-box
+    <dfo-message-box
       [title]="'app.register-view.error.title' | translate"
       kind="warn"
       (closed)="removeError()"
       *ngIf="errorCode"><p>{{ errorCode | translate }}</p>
-    </bike-message-box>
+    </dfo-message-box>
     <mat-form-field class="form-field">
       <mat-label>{{ 'app.register-view.label.name' | translate }}</mat-label>
       <input type="text" matInput class="form-control" formControlName="name" required>
@@ -40,8 +40,8 @@
         {{ 'app.register-view.command.register' | translate }}
       </button>
     </div>
-    <bike-message-box [title]="'app.register-view.message.title' | translate" kind="info" [withClose]="false">
+    <dfo-message-box [title]="'app.register-view.message.title' | translate" kind="info" [withClose]="false">
       <p><a routerLink="/login">{{ 'app.register-view.message.text' | translate }}</a></p>
-    </bike-message-box>
+    </dfo-message-box>
   </form>
 </section>
