--- a/frontend/src/scss/_variables.scss
+++ b/frontend/src/scss/_variables.scss
@@ -42,3 +42,9 @@ $border: 1px;
 $border-radius: $half-gap;
 $border-radius-small: $four-gap;
 $border-color: $divider-color;
+
+//
+// Sidebar Dimension
+//
+$sidebar-width-medium: 220px;
+$sidebar-width-large: 240px;
