Dashboard: sidebar panel
with hero logo

--- a/frontend/projects/webapp/src/app/dashboard/views/home/home-view.component.html
+++ b/frontend/projects/webapp/src/app/dashboard/views/home/home-view.component.html
@@ -1,13 +1,18 @@
 <mat-sidenav-container class="view-home">
   <mat-sidenav class="view-sidebar" mode="over" [opened]="sidebarOpen$ | async" (closed)="closeSidebar()" *ngIf="!(largeMode$ | async)">
-    Popup sidebar
+    <dfo-sidebar-panel kind="popup"></dfo-sidebar-panel>
   </mat-sidenav>
   <mat-sidenav-content class="view-container">
-    <dfo-nav-bar errors="2" title="Don't Forget" [largeMode]="largeMode$ | async" (navBar)="navBarClicked($event)"></dfo-nav-bar>
+    <dfo-nav-bar
+      [errors]="errorCount$ | async"
+      title="Don't Forget"
+      [largeMode]="largeMode$ | async"
+      (navBar)="navBarClicked($event)">
+    </dfo-nav-bar>
 
     <div class="view-content">
       <aside class="view-sidebar" *ngIf="largeMode$ | async">
-        Aside Sidebar
+        <dfo-sidebar-panel kind="aside"></dfo-sidebar-panel>
       </aside>
       <main class="view-main">
 
