--- a/frontend/projects/webapp/src/app/dashboard/views/home/home-view.component.scss
+++ b/frontend/projects/webapp/src/app/dashboard/views/home/home-view.component.scss
@@ -10,10 +10,7 @@
 
     .view-sidebar {
       @include absWidth($sidebar-width-medium);
-      @include notch-left($half-gap);
-      @include notch-top($half-gap);
-      @include notch-bottom($half-gap);
-
+      padding: 0;
       @include device-large() {
         @include absWidth($sidebar-width-large);
       }
@@ -34,10 +31,6 @@
           @include absWidth(calc(env(safe-area-inset-left) + #{$sidebar-width-large}));
           overflow: auto;
           background-color: mat-color($mat-grey, 200);
-          padding-top: $half-gap;
-          padding-right: $half-gap;
-          @include notch-bottom($half-gap);
-          @include notch-left($half-gap);
         }
 
         .view-main {
