--- a/frontend/src/scss/_variables.scss
+++ b/frontend/src/scss/_variables.scss
@@ -48,3 +48,9 @@ $border-color: $divider-color;
 //
 $sidebar-width-medium: 220px;
 $sidebar-width-large: 240px;
+
+//
+// Sidebar => User Avatar Height
+//
+$sidebar-avatar-height-medium: $sidebar-width-medium; // The sidebar avatar is large in the device medium because it is sidebar from left
+$sidebar-avatar-height-large: 60px;
