--- a/frontend/projects/webapp/src/app/sidebar/components/sidebar-panel/sidebar-panel.component.html
+++ b/frontend/projects/webapp/src/app/sidebar/components/sidebar-panel/sidebar-panel.component.html
@@ -2,4 +2,5 @@
   <div class="hero-logo">
     <dfo-hero-panel [user]="userName" (select)="selectHero()"></dfo-hero-panel>
   </div>
+  <dfo-sidebar-navbar></dfo-sidebar-navbar>
 </section>
