Frontend: media query
define the vertical and horizontal mode
define vertical small / large
define horizontal large / small

--- a/frontend/projects/webapp/src/app/sidebar/components/sidebar-panel/sidebar-panel.component.html
+++ b/frontend/projects/webapp/src/app/sidebar/components/sidebar-panel/sidebar-panel.component.html
@@ -2,5 +2,9 @@
   <div class="hero-logo">
     <dfo-hero-panel [user]="user$ | async" (select)="selectHero()"></dfo-hero-panel>
   </div>
-  <dfo-sidebar-navbar [items]="items"></dfo-sidebar-navbar>
+  <dfo-sidebar-navbar
+    [items]="items"
+    [small]="verticalSmall$ | async"
+    [large]="horizontalLarge$ | async">
+  </dfo-sidebar-navbar>
 </section>
