--- a/frontend/src/scss/_variables.scss
+++ b/frontend/src/scss/_variables.scss
@@ -54,3 +54,9 @@ $sidebar-width-large: 240px;
 //
 $sidebar-avatar-height-medium: $sidebar-width-medium; // The sidebar avatar is large in the device medium because it is sidebar from left
 $sidebar-avatar-height-large: 4rem;
+
+//
+// Action buttons
+//
+$action-active-background: $active-background-color;
+$action-active-text-color: $active-text-color;
