--- a/frontend/projects/webapp/src/app/sidebar/components/sidebar-action/sidebar-action.component.scss
+++ b/frontend/projects/webapp/src/app/sidebar/components/sidebar-action/sidebar-action.component.scss
@@ -1,30 +1,12 @@
 
 @import "~src/scss/gobals";
+@import "../sidebar-action";
 
 :host {
   display: block;
   margin: 0;
 
   .sidebar-action {
-    @include display-flex(row);
-    @include notch-left($half-gap);
-    padding-top: $half-gap;
-    padding-right: $half-gap;
-    padding-bottom: $half-gap;
-    align-items: center;
-
-    .icon {
-      @include flex-fixed();
-      margin-right: $half-gap;
-    }
-
-    .arrow {
-      @include flex-fixed();
-    }
-
-    .title {
-      @include flex-resizable();
-      margin: 0 0 $four-gap 0;
-    }
+    @include sidebar-action();
   }
 }
