UI: Logout dialog
add the dialog logout
update redux store for action logout-user

--- a/frontend/src/scss/_variables.scss
+++ b/frontend/src/scss/_variables.scss
@@ -44,6 +44,11 @@ $border-radius-small: $four-gap;
 $border-color: $divider-color;
 
 //
+// Dialog
+//
+$dialog-padding-top: 64px;
+
+//
 // Sidebar Dimension
 //
 $sidebar-width-medium: 220px;
