--- a/frontend/src/scss/mixin/_dialog.scss
+++ b/frontend/src/scss/mixin/_dialog.scss
@@ -1,4 +1,5 @@
 
+
 @mixin dialog($width: null, $height: null) {
   :host {
     display: block;
@@ -20,7 +21,7 @@
       margin: 0 auto;
 
       &.on-top {
-        top: $navbar-height + $full-gap;
+        @include notch-top($dialog-padding-top + $full-gap);
         bottom: unset;
       }
 
@@ -72,6 +73,10 @@
         @include display-flex(row);
         justify-content: flex-end;
         padding: $half-gap;
+
+        .button {
+          margin-left: $half-gap;
+        }
       }
 
       @content;
