UI: sidebar action & command
Move the logout dialog to the dashboard module
trigger the sidebar command to the viewer component

--- a/frontend/projects/webapp/src/app/dashboard/views/home/home-view.component.html
+++ b/frontend/projects/webapp/src/app/dashboard/views/home/home-view.component.html
@@ -3,7 +3,9 @@
     <dfo-sidebar-panel
       kind="popup"
       [commandList]="commandList"
-      [actionList]="actionList">
+      [actionList]="actionList"
+      (command)="executeCommand($event)"
+      (action)="executeAction($event)">
     </dfo-sidebar-panel>
   </mat-sidenav>
   <mat-sidenav-content class="view-container">
@@ -19,7 +21,9 @@
         <dfo-sidebar-panel
           kind="aside"
           [commandList]="commandList"
-          [actionList]="actionList">
+          [actionList]="actionList"
+          (command)="executeCommand($event)"
+          (action)="executeAction($event)">>
         </dfo-sidebar-panel>
       </aside>
       <main class="view-main">
